# gateau-desktop

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/gateau_desktop/: __main__.py  constants.py  emulator_reader.py  environment.py  gateau_client.py  ram_monitor.py
tests/: conftest.py  test_emulator_reader.py  test_ram_monitor.py
